deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replay-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: replay-hub
  template:
    metadata:
      labels:
        app: replay-hub
    spec:
      containers:
        - name: replay-hub
          image: docker.io/keanuwatts/theclusterflux:replay-hub
          imagePullPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: replay-hub
spec:
  selector:
    app: replay-hub
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: replay-hub
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - replay-hub.theclusterflux.com
    secretName: theclusterflux
  rules:
  - host: replay-hub.theclusterflux.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: replay-hub
            port:
              number: 8080
